--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ main h2 {
   border-radius: 8px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
   text-align: center;
+  line-height: 1.5;
 }
 
 .questionBlock h3 {
@@ -101,10 +102,32 @@ main h2 {
   letter-spacing: 1px;
 }
 
+.questionBtn:focus {
+  outline: none;
+}
+
+.infoBlock {
+  padding: 25px 0 25px 0;
+  line-height: 1.5;
+}
+
+.infoBlock h5 {
+  margin: 0;
+  text-align: center;
+  font-weight: 200;
+  font-size: 28px;
+}
+
+.infoBlock p {
+  text-align: justify;
+  font-weight: 300;
+  font-size: 18px;
+}
+
 footer {
   display: flex;
   justify-content: center;
-  padding: 5px;
+  padding: 15px;
   border-top: 1px solid rgb(102, 51, 153, 0.25);
   background-color: snow;
 }
