--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ body {
 }
 
 header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 8vh;
+
   padding: 15px 30px 15px 30px;
   border-bottom: 1px solid rgb(102, 51, 153, 0.25);
   background-color: snow;
@@ -57,7 +62,7 @@ main {
 }
 
 main h2 {
-  margin: 25px;
+  margin: 50px 25px 75px 25px;
   text-align: center;
   font-size: 28px;
   font-weight: 200;
@@ -69,7 +74,7 @@ main h2 {
 .questionBlock {
   background-color: snow;
   padding: 15px;
-  margin: 50px 0 50px 0;
+  margin: 0 0 75px 0;
   border: 1px solid rgb(102, 51, 153, 0.25);
   border-radius: 8px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
@@ -85,13 +90,12 @@ main h2 {
   font-weight: 600;
 }
 
-.questionEx {
+.example {
   display: grid;
   margin: 0;
   padding: 0 30px 0 30px;
   font-size: 18px;
   font-weight: 300;
-  letter-spacing: 1px;
 }
 
 .btnBlock {
@@ -101,7 +105,11 @@ main h2 {
 }
 
 .questionBtn {
-  background-color: rgb(102, 51, 153, 0.75);
+  background-image: linear-gradient(
+    to right,
+    rgba(53, 51, 153, 0.75),
+    rgb(102, 51, 153, 0.75)
+  );
   border-radius: 8px;
   border-style: none;
   height: 50px;
@@ -114,6 +122,15 @@ main h2 {
 
 .questionBtn:focus {
   outline: none;
+}
+
+.questionBtn:hover {
+  background-image: linear-gradient(
+    to right,
+    rgba(53, 51, 153, 0.8),
+    rgb(102, 51, 153, 0.8)
+  );
+  font-weight: 400;
 }
 
 .aboutBlock {
