--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header {
   min-height: 8vh;
 
   padding: 15px 30px 15px 30px;
-  border-bottom: 1px solid rgb(102, 51, 153, 0.25);
+  border-bottom: 2px solid rgb(102, 51, 153, 0.25);
   background-color: snow;
 }
 
@@ -75,7 +75,7 @@ main h2 {
   background-color: snow;
   padding: 15px;
   margin: 0 0 75px 0;
-  border: 1px solid rgb(102, 51, 153, 0.25);
+  border: 2px solid rgb(102, 51, 153, 0.25);
   border-radius: 8px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
   text-align: center;
@@ -151,11 +151,14 @@ main h2 {
   font-size: 18px;
 }
 
+.infoBlock {
+}
+
 footer {
   display: flex;
   justify-content: center;
   padding: 15px;
-  border-top: 1px solid rgb(102, 51, 153, 0.25);
+  border-top: 2px solid rgb(102, 51, 153, 0.25);
   background-color: snow;
 }
 
