--- a/style.css
+++ b/style.css
@@ -67,7 +67,17 @@ header {
   background-color: var(--snow);
 }
 
-header h1 {
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  width: 50px;
+  height: 50px;
+}
+
+.logo h1 {
   margin: 0;
 }
 
