--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ a {
   color: var(--maintext);
 }
 
+p {
+  font-size: 18px;
+  font-weight: 300;
+}
+
 h1 {
   font-size: 36px;
 }
@@ -116,7 +121,6 @@ main h2 {
 .questionBtn {
   height: 50px;
   font-size: 18px;
-  font-weight: 300;
   color: var(--smoke);
   letter-spacing: 1px;
   border-radius: 8px;
@@ -124,8 +128,9 @@ main h2 {
   cursor: pointer;
   background-image: linear-gradient(
     to right,
-    rgba(53, 51, 153, 0.75),
-    rgba(100, 61, 139, 0.75)
+    rgb(64, 93, 255, 0.75),
+    rgb(102, 76, 255, 0.75),
+    rgb(173, 46, 255, 0.75)
   );
 }
 
@@ -134,11 +139,11 @@ main h2 {
 }
 
 .questionBtn:hover {
-  font-weight: 400;
   background-image: linear-gradient(
     to right,
-    rgba(53, 51, 153, 0.8),
-    rgb(102, 51, 153, 0.8)
+    rgb(64, 93, 255, 0.85),
+    rgb(102, 76, 255, 0.85),
+    rgb(173, 46, 255, 0.85)
   );
 }
 
@@ -176,15 +181,12 @@ main h2 {
 .talkingIcon {
   padding: 15px;
   margin: 25px 100px 25px 100px;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
   /* question block config */
+  text-align: center;
   background-color: var(--snow);
   border: 2px solid rgb(102, 51, 153, 0.25);
   border-radius: 8px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
-  text-align: center;
 }
 
 footer {
@@ -192,13 +194,14 @@ footer {
   padding: 15px;
   justify-content: center;
   background-color: var(--snow);
-  border-top: 2px solid rgb(102, 51, 153, 0.25);
+  border: 2px solid rgb(102, 51, 153, 0.25);
 }
 
 footer a {
   margin: 0;
   padding: 0;
   font-size: 14px;
+  font-weight: 300;
 }
 
 /* 
