--- a/style.css
+++ b/style.css
@@ -75,11 +75,7 @@ header {
 .logo {
   display: flex;
   align-items: center;
-}
-
-.logo img {
-  width: 50px;
-  height: 50px;
+  cursor: pointer;
 }
 
 .logo h1 {
@@ -113,15 +109,15 @@ main h2 {
 
 .example {
   display: grid;
-  margin: 0 30px 0 30px;
-  font-size: 18px;
-  font-weight: 300;
+  margin: 0 25px 0 25px;
+  font-size: 16px;
+  font-weight: 200;
 }
 
 .questionBtn {
   height: 50px;
   font-size: 18px;
-  color: var(--smoke);
+  color: var(--snow);
   letter-spacing: 1px;
   border-radius: 8px;
   border-style: none;
