--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ ul {
 
 a {
   text-decoration: none;
-  color: var(--maintext);
 }
 
 p {
@@ -193,11 +192,12 @@ footer {
   border: 2px solid rgb(102, 51, 153, 0.25);
 }
 
-footer a {
+footer a, h5 {
   margin: 0;
   padding: 0;
   font-size: 14px;
   font-weight: 300;
+  color: var(--maintext);
 }
 
 /* 
