--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header {
   align-items: center;
   justify-content: space-between;
   min-height: 8vh;
-  padding: 15px 30px 15px 30px;
+  padding: 30px 30px 30px 30px;
   border-bottom: 2px solid rgb(102, 51, 153, 0.25);
   background-color: var(--snow);
 }
@@ -213,11 +213,19 @@ h5 {
     padding: 15px 60px 15px 60px;
   }
 
+  main h2 {
+    margin: 50px 50px 75px 25px;
+    text-align: center;
+  }
+  .questionBlock {
+    margin: 0 60px 0 60px;
+  }
   .questionsIcon,
   .visitsIcon,
   .talkingIcon {
-  padding: 15px;
-  margin: 25px 150px 25px 150px;
+    padding: 15px;
+    margin: 25px 150px 25px 150px;
+  }
 }
 
 @media (min-width: 1020px) {
@@ -229,7 +237,19 @@ h5 {
     padding: 15px 90px 15px 90px;
   }
 
+  main h2 {
+    margin: 50px 75px 75px 75px;
+    text-align: center;
+  }
+
   .questionBlock {
-margin: 0 90px 0 90px;
-}
+    margin: 0 90px 0 90px;
+  }
+
+  .questionsIcon,
+  .visitsIcon,
+  .talkingIcon {
+    padding: 15px;
+    margin: 25px 250px 25px 250px;
+  }
 }
