--- a/style.css
+++ b/style.css
@@ -41,10 +41,6 @@ h1 {
   letter-spacing: 1px;
 }
 
-h2 {
-  font-size: 36px;
-}
-
 h3 {
   font-size: 28px;
   font-weight: 200;
@@ -90,9 +86,12 @@ header {
   background-color: var(--snow);
 }
 
-header h2,
-h6 {
+.logo {
+  font-family: inherit;
+  font-size: 28px;
   margin: 0;
+  padding: 0;
+  font-weight: 600;
 }
 
 main {
